kubernetes/tests/pods.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-log
  namespace: test-jsa
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: jsadmissions.momiji.com/not-existing-key
                operator: NotIn
                values: [ "not-existing-value" ]
  containers:
    - name: sleep
      image: busybox
      command: [ "sleep", "10s" ]
  restartPolicy: Never
---
apiVersion: v1
kind: Pod
metadata:
  name: test-log-pending
  namespace: test-jsa
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: jsadmissions.momiji.com/not-existing-key
                operator: In
                values: [ "not-existing-value" ]
  containers:
    - name: sleep
      image: busybox
      command: [ "sleep", "10s" ]
  restartPolicy: Never
